--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Artigo 002</h2>
             <p>Texto Artigo 002</p>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor iste ipsum incidunt corrupti sed provident, maxime debitis omnis, est expedita, quod veniam commodi velit. Numquam alias amet autem eum cupiditate??</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor iste ipsum incidunt corrupti sed provident, maxime debitis omnis, est expedita, quod veniam commodi velit. Numquam alias amet autem eum cupiditate?!</p>
         </article>
 
     </main>
