--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus accusantium cupiditate vel sequi sunt accusamus officia. Quam dolorum, tempore impedit recusandae eius officia vel autem, tempora possimus, in ut hic.</p>
-            <p><a href="">Acesse o curso de HTML5</a></p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor iste ipsum incidunt corrupti sed provident, maxime debitis omnis, est expedita, quod veniam commodi velit. Numquam alias amet autem eum cupiditate?!</p>
-            <p><a href="">Acesse o curso de JavaScript</a></p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
     
