--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus accusantium cupiditate vel sequi sunt accusamus officia. Quam dolorum, tempore impedit recusandae eius officia vel autem, tempora possimus, in ut hic.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Aatualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos configurações visuais que um site vai ter.</p>
             <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor iste ipsum incidunt corrupti sed provident, maxime debitis omnis, est expedita, quod veniam commodi velit. Numquam alias amet autem eum cupiditate?!</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr> </p>
             <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
